class1/multi-stagecontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-container
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
  - image: linuxserver/firefox
    name: firefox-container
    resources:
      requests:
        memory: "128Mi"
        cpu: "500m"
      limits:
        memory: "256Mi"
        cpu: "1000m"
    ports:
    - containerPort: 3000
