class1/pod-nginx.yml

apiVersion: v1
kind: Pod
metadata:
  name: ngix1
  namespace: default
  labels:
    type: kingfisher
spec:
  containers:
  - image: nginx
    name: nginx-container
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
